--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "license": "MIT",
 	"description": "Show out-of-stock product configurations for configurable products on the front end.",
 	"require": {
-		"php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
-        "magento/framework": "~100.0.4"
+		"php": "~7.0.13|7.1.*|7.2.0 - 7.2.11",
+        "magento/framework": "~101.0.7"
 	},
 	"autoload": {
 		"files": [
